feat: initial commit

--- a/CleaningManagementApi/CleaningManagement.Api/appsettings.json
+++ b/CleaningManagementApi/CleaningManagement.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerDbProviderCMDataBase": "Server=(localdb)\\mssqllocaldb;Database=CleanningManagement;Trusted_Connection=True;"
+  }
 }
