--- a/CleaningManagementApi/CleaningManagement.Api/CleaningManagement.Api.csproj
+++ b/CleaningManagementApi/CleaningManagement.Api/CleaningManagement.Api.csproj
@@ -1,19 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5">
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleaningManagement.DAL\CleaningManagement.DAL.csproj" />
+    <ProjectReference Include="..\CleaningManagement.Application\CleaningManagement.Application.csproj" />
+    <ProjectReference Include="..\CleanningManagement.Infrastructure\CleanningManagement.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
