feat: adding base validator implementation

--- a/CleaningManagementApi/CleaningManagement.Application/CleaningManagement.Application.csproj
+++ b/CleaningManagementApi/CleaningManagement.Application/CleaningManagement.Application.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="UseCases\CleanningPlan\ValidationRules\" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
   </ItemGroup>
 
 </Project>
