feat: resources file added

--- a/CleaningManagementApi/CleaningManagement.Api/CleaningManagement.Api.csproj
+++ b/CleaningManagementApi/CleaningManagement.Api/CleaningManagement.Api.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CleaningManagement.Application\CleaningManagement.Application.csproj" />
     <ProjectReference Include="..\CleanningManagement.Infrastructure\CleanningManagement.Infrastructure.csproj" />
+    <ProjectReference Include="..\CleanningManagement.Resources\CleanningManagement.Resources.csproj" />
   </ItemGroup>
 
 </Project>
